<resources>
    <string name="app_name">Calculator</string>
    <string name="login_title_text">Login</string>
    <string name="enter_email_hint_text">Enter Email</string>
    <string name="enter_passowrd_hint_text">Enter Passowrd</string>
    <string name="login_btn_text">Login</string>
    <string name="sign_up_title_text">SignUp</string>
    <string name="sign_up_btn_text">Sign Up</string>

    <string name="request_error_dialog_title">Error</string>
    <string name="request_error_dialog_message">Something went wrong while processing request</string>
    <string name="request_error_dialog_ok_btn">ok</string>
    <string name="authenticating_dialog_text">Authenticating...</string>


    <string name="error_calculation_text">Error while calculation</string>
    <string name="btn_clear_text">Clear</string>
    <string name="btn_seven_text">7</string>
    <string name="btn_eight_text">8</string>
    <string name="btn_nine_text">9</string>
    <string name="op_division_text">/</string>
    <string name="btn_four_text">4</string>
    <string name="btn_five_text">5</string>
    <string name="btn_six_text">6</string>
    <string name="op_multiply_text">*</string>
    <string name="btn_one_text">1</string>
    <string name="btn_two_text">2</string>
    <string name="btn_three_text">3</string>
    <string name="op_subtraction_txt">-</string>
    <string name="btn_zero_text">0</string>
    <string name="op_equal_text">=</string>
    <string name="op_addition_text">+</string>
    <string name="history_text">History</string>
    <string name="no_history_title">No Calculation History</string>
</resources>