<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto">

<data>
    <import type="android.view.View"/>
    <variable name="viewModel"
        type="com.example.calculator.ui.calculation.CalculatorViewModel"/>
</data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.calculation.CalculatorFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_red_dark"
            android:gravity="center"
            android:textSize="14sp"
            android:visibility="@{viewModel.isError ? View.VISIBLE : View.GONE}"
            android:text="@string/error_calculation_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.041"/>

        <TextView
            android:id="@+id/display_text"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_margin="16dp"
            android:gravity="end|bottom"
            android:text="@{viewModel.expression}"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/error_text"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_clear"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/btn_clear_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/display_text"
            app:layout_constraintVertical_bias="0.035"/>


        <Button
            android:id="@+id/btn_seven"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_seven_text"
            app:layout_constraintEnd_toStartOf="@+id/btn_eight"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_four"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <Button
            android:id="@+id/btn_eight"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_eight_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_five"
            app:layout_constraintEnd_toStartOf="@+id/btn_nine"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_seven"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear" />

        <Button
            android:id="@+id/btn_nine"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_nine_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_six"
            app:layout_constraintEnd_toStartOf="@+id/op_div"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_eight"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear"/>

        <Button
            android:id="@+id/op_div"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/op_division_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_nine"
            app:layout_constraintBottom_toTopOf="@id/op_multiply"
            app:layout_constraintTop_toBottomOf="@+id/btn_clear"/>

        <Button
            android:id="@+id/btn_four"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:text="@string/btn_four_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintBottom_toTopOf="@id/btn_one"
            app:layout_constraintEnd_toStartOf="@+id/btn_five"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_seven" />

        <Button
            android:id="@+id/btn_five"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_five_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_two"
            app:layout_constraintEnd_toStartOf="@+id/btn_six"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_four"
            app:layout_constraintTop_toBottomOf="@+id/btn_eight" />

        <Button
            android:id="@+id/btn_six"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_six_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_nine"
            app:layout_constraintBottom_toTopOf="@id/btn_three"
            app:layout_constraintEnd_toStartOf="@+id/op_multiply"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_five"/>
        <Button
            android:id="@+id/op_multiply"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/op_multiply_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_six"
            app:layout_constraintTop_toBottomOf="@+id/op_div"
            app:layout_constraintBottom_toTopOf="@id/op_subtraction"/>

        <Button
            android:id="@+id/btn_one"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_one_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toStartOf="@+id/btn_two"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_zero"
            app:layout_constraintTop_toBottomOf="@+id/btn_four" />

        <Button
            android:id="@+id/btn_two"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_two_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_zero"
            app:layout_constraintEnd_toStartOf="@+id/btn_three"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_one"
            app:layout_constraintTop_toBottomOf="@+id/btn_five" />

        <Button
            android:id="@+id/btn_three"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_three_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_six"
            app:layout_constraintBottom_toTopOf="@id/op_equals"
            app:layout_constraintEnd_toStartOf="@+id/op_subtraction"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_two"/>

        <Button
            android:id="@+id/op_subtraction"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/op_subtraction_txt"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_three"
            app:layout_constraintTop_toBottomOf="@+id/op_multiply"
            app:layout_constraintBottom_toTopOf="@id/op_addition"/>



        <Button
            android:id="@+id/btn_history"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/history_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_zero"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_one" />

        <Button
            android:id="@+id/btn_zero"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/btn_zero_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/op_equals"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/btn_history"
            app:layout_constraintTop_toBottomOf="@+id/btn_two" />

        <Button
            android:id="@+id/op_equals"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/op_equal_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_three"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/op_addition"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_zero"/>

        <Button
            android:id="@+id/op_addition"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/op_addition_text"
            android:onClick="@{(view) -> viewModel.onClick(view)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/op_equals"
            app:layout_constraintTop_toBottomOf="@+id/op_subtraction"
            app:layout_constraintBottom_toBottomOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>